--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,9 @@ on:
 jobs:
   build-and-publish-latest:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' # Running this job only for master branch
+    if: github.ref == 'refs/heads/main'
     steps:
-      - uses: actions/checkout@v4 # Checking out the repo
+      - uses: actions/checkout@v4
       - name: Build and Publish latest Docker image
         uses: TCPShield/gp-docker-action@1.1.13
         with:
